# mac-dock-widget

./: CMakeLists.txt  README.md  build.bat  build_mac.sh
SysMonitor.app/Contents/: Info.plist
SysMonitor.app/Contents/MacOS/: SysMonitor
libs/common/: common.h
libs/cpu/: cpu.cpp  cpu.h
libs/disk/: disk.cpp  disk.h
libs/draw/: draw.cpp  draw.h
libs/gdip/: gdip.cpp  gdip.h
libs/globals/: globals.cpp  globals.h
libs/gpu/: gpu.cpp  gpu.h
libs/http/: http.cpp  http.h
libs/json/: json.cpp  json.h
libs/layout/: layout.cpp  layout.h
libs/mac/: external_mac.h  external_mac.mm  mac_globals.cpp  mac_globals.h  metrics_mac.h  metrics_mac.mm
libs/mem/: mem.cpp  mem.h
libs/net/: net.cpp  net.h
libs/tooltip/: tooltip.cpp  tooltip.h
libs/tray/: tray.cpp  tray.h
libs/util/: util.cpp  util.h
src/: mac.main.cpp  main.cpp
